# hangarfit

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  .test_durations  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  codecov.yml  jsconfig.json  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.txt  requirements-fuzz.in  requirements-fuzz.txt  requirements-pip-tools.in  requirements-pip-tools.txt
.claude/: README.md  settings.json
.claude/agents/: determinism-guard.md  geometry-invariant-guard.md  ml-rl-guard.md  scene-schema-guard.md
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/codeql/: javascript-typescript.yml
.github/workflows/: bench-gates.yml  ci.yml  codeql.yml  fuzz.yml  release.yml  scorecard.yml  viewer.yml
bench/: README.md  __init__.py  harness.py  profile_pipeline.py  regimes.py  se2_heuristic_probe.py  singleproc_numpy_vec.py  train_throughput.py
data/: fleet.yaml  hangar.yaml
data/catalog/: README.md  aviat_husky.yaml  cessna_140.yaml  cessna_150.yaml  ctsl.yaml  fk9_mkii.yaml  fuji.yaml  glider_trailer_1.yaml  glider_trailer_2.yaml  maul_fuel_trailer.yaml  scheibe_falke.yaml  stemme_s10.yaml  vw_caddy.yaml  wild_thing.yaml  zlin_savage.yaml
docs/: openssf-best-practices-badge-silver.md  openssf-best-practices-badge.md  osps-baseline-L1.md  release-security-assessment.md  reproducible-builds.md  security-posture.md
docs/adr/: 0000-record-architecture-decisions.md  0001-aircraft-parts-model.md  0002-determinant-minus-one-transform.md  0003-rr-mc-solver-algorithm.md  0004-diversity-metric.md  0005-maintenance-bay-rule.md  0006-bay-intrusion-maintenance-rule.md  0007-tow-path-planner-v1-scope.md  0008-inter-plane-spread-soft-preference.md  0009-single-supported-python-version.md  0010-reeds-shepp-motion-model.md  0011-linear-history-strategy-under-gitflow.md  0012-fuselage-front-aft-split.md  0013-wheels-canonical-data.md  0014-merge-commit-only-history-strategy.md  0015-wheels-not-in-collision-model.md  0016-spread-towability-fallback.md  0017-3d-viewer-architecture.md  0018-non-rectangular-hangar-footprint.md  0019-brand-tokens-single-source.md  0020-viewer-typescript-architecture.md  0021-tow-planner-staging-apron.md  0022-nose-out-parked-heading.md  0023-empennage-tail-surfaces.md  0024-optional-polygon-parts.md  0025-ground-object-taxonomy.md  0026-caddy-hard-door-egress.md  0027-learned-backend-determinism-scope.md  0028-learned-backend-train-to-mastery-resolved-negative.md  README.md  template.md
docs/architecture/: 01-introduction-and-goals.md  02-architecture-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  08-crosscutting-concepts.md  09-architecture-decisions.md  README.md  ml-observation-schema.md  scene-v1-schema.md  scene-v2-schema.md
docs/assets/: BRAND.md
docs/dev/: lockfiles.md  test-flakes-and-ci-gotchas.md
docs/spikes/: ci-test-speedup.md  cnn-layout.md  cnn-tow-path.md  graphify-knowledge-graph-vs-quickref.md  herrenteich-all8-tow-routing-rootcause.md  herrenteich-fk9-cessna-lateral-shuffle.md  herrenteich-fk9-cessna-trajopt-determinism-precheck.md  herrenteich-reverse-teardown-probe.md  herrenteich-routing-ceiling-baseline.md  perf-617-third-pass.md  polygon-part-geometry-feasibility.md  sat-geos-equivalence.md  singleproc-numpy-vec.md  solve-tow-perf-second-pass.md  solve-tow-profiling.md  tow-apron-v2.md  tow-path-planning.md  towplanner_v2_routability_bench.py
examples/: README.md
examples/herrenteich/: README.md  fleet.yaml  hangar.yaml  layout.yaml  layout_full.yaml  layout_today.yaml  scenario.yaml  scenario_demo.yaml  scenario_full.yaml  scenario_today.yaml
examples/layouts/: example.yaml  example_invalid.yaml
herrenteich/: README.md  fleet.yaml  hangar.yaml  layout.yaml  scenario.yaml
layouts/: example.yaml  example_invalid.yaml
ml/: README.md  __init__.py  action_space.py  benchmark.py  checkpoint.py  curriculum.py  encoding.py  env.py  eval.py  export.py  gate.py  geometry_oracle.py  infer.py  policy.py  ppo.py  probe_metric.py  reach_rate.py  reward.py  stage_builder.py  sweep.py  train.py  types.py  vector_env.py
scripts/: normalize-sdist.py
src/hangarfit/: __init__.py  _sat.py  brand.py  cli.py  collisions.py  geometry.py  learned.py  loader.py  metrics.py  models.py  scene.py  solver.py  towplanner.py  viewer.py  visualize.py
tests/: _fleet_test_utils.py  conftest.py  test_cli.py  test_cli_backend.py  test_cli_solve.py  test_cli_view.py  test_collisions.py  test_collisions_ground_object.py  test_fleet_polygon_optin.py  test_geometry.py  test_glider_taper_flip.py  test_ground_objects_integration.py  test_herrenteich_dataset.py  test_herrenteich_region.py  test_learned.py  test_loader.py  test_loader_catalog.py  test_loader_door_order.py  test_loader_fuselage_outline.py  test_loader_planform.py  test_loader_scenario.py  test_loader_scenario_ground_objects.py  test_loader_wheels.py  test_metrics.py  test_models.py  test_models_door_order.py  test_models_ground_object.py  test_models_region.py  test_motion_clearance.py  test_part_polygon.py  test_parts_cache.py  test_property_invariants.py  test_sat_collisions.py  test_scenario.py  test_scene.py  test_solver_canaries.py  test_solver_door_order.py  test_solver_fixture_matrix.py  test_solver_ground_objects.py  test_solver_infeasibility.py  (+30 more)
tests/bench/: test_profile_pipeline_witness.py  test_se2_heuristic_probe.py
tests/fixtures/: canary_hangar_tight_18m.yaml  fleet_region_demo.yaml  fleet_taper.yaml  hangar_area_too_small.yaml  hangar_region_demo.yaml  hangar_taper.yaml  invalid_bay_intrusion_wingtip.yaml  invalid_cart_rule.yaml  invalid_fuselage_fuselage.yaml  invalid_fuselage_wing_overlap.yaml  invalid_hangar_bounds.yaml  invalid_wing_over_fin.yaml  (+55 more)
viewer/: README.md  esbuild.config.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.json
(+184 files in other folders)
