[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hangarfit"
version = "0.6.1"
description = "Helper tool for arranging the flying club fleet in a stack-style hangar — collision checker + visualizer (Phase 1)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Patrick Kuhn" }]
license = "Apache-2.0"
classifiers = []
dependencies = [
  "pyyaml>=6.0",
  "shapely>=2.0,<3",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.0", "ruff>=0.7.0", "mypy>=1.0", "types-PyYAML", "types-shapely"]

[project.scripts]
hangarfit = "hangarfit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default to skipping @slow-marked tests so local `pytest` matches CI.
# Run the slow set on demand with `pytest -m slow`, or run everything
# with `pytest -m ""`.
addopts = "-ra -m 'not slow'"
markers = [
    "slow: tests that may exceed the default 5 s per-fixture solve budget (excluded by default via addopts; run on demand via `pytest -m slow`)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
# Defaults are fine — quote-style="double", indent-style="space", line-ending="lf".

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "hangarfit.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = false

# matplotlib ships no PEP 561 stubs; ignore its imports rather than
# using an unofficial stub package that may not track the 3.x API.
[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
