[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hangarfit"
version = "0.15.0"
description = "Helper tool for arranging a flying club's fleet in a stack-style hangar — collision checker, layout solver, tow-path planner, and top-down visualizer."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Patrick Kuhn" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = []
dependencies = [
  "pyyaml>=6.0",
  "shapely>=2.0,<3",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.0", "pytest-xdist>=3.5", "ruff>=0.7.0", "mypy>=1.0", "types-PyYAML", "types-shapely", "hypothesis>=6.100"]

[project.scripts]
hangarfit = "hangarfit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the 3D-viewer assets (vendored Three.js + viewer.js) inside the wheel so
# `hangarfit view` can read them at runtime via importlib.resources after a
# plain `pip install` (ADR-0017). These are non-.py files, so they need an
# explicit package-data entry — `packages.find` discovers the packages but not
# their data.
#
# The first entry is the EXPLICIT `viewer.js`, not a `*.js` glob (ADR-0020 /
# issue #437): the viewer's TypeScript source lives in the top-level `viewer/`
# dir, *outside* this package, and esbuild only emits `viewer.js` here — but
# naming the file (rather than globbing) is belt-and-suspenders so no future
# stray `.js` under `_viewer_assets/` can be shipped by accident. The TS
# toolchain (`viewer/`) is never discovered by `packages.find` (`where=["src"]`),
# so no `*.ts`/`node_modules`/`package.json` can reach the sdist or wheel.
[tool.setuptools.package-data]
"hangarfit._viewer_assets" = ["viewer.js"]
"hangarfit._viewer_assets.three" = ["*.js", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default to skipping @slow-marked tests so local `pytest` matches CI.
# Run the slow set on demand with `pytest -m slow`, or run everything
# with `pytest -m ""`.
addopts = "-ra -m 'not slow'"
markers = [
    "slow: tests that may exceed the default 5 s per-fixture solve budget (excluded by default via addopts; run on demand via `pytest -m slow`)",
    "serial: wall-clock-budget determinism canaries that run solve() twice in-process under a `budget_s` deadline and assert bit-identical output — they MUST run OUTSIDE the `-n auto` pytest-xdist pool (CI runs them in a separate serial pass, #492). Under CPU starvation the two in-process solves can complete different restart counts within the same wall-clock budget and diverge, so xdist sibling-worker contention would flake them. `@pytest.mark.xdist_group`/`--dist loadgroup` is INSUFFICIENT: it co-locates a group on one worker but does NOT stop the other workers from saturating the CPU, so the wall-clock budget still races.",
]

[tool.coverage.run]
# Measure branch coverage, not just statement coverage, so a conditional
# whose body is exercised but whose alternate edge is never taken (e.g. an
# `if` with no covered `else`) shows up as a partial rather than reading as
# fully covered. Set here rather than as a `--cov-branch` CLI flag so local
# `pytest --cov` and CI pick it up identically — same local==CI parity goal
# as the `addopts` marker filter above. coverage.py reads this section
# automatically under pytest-cov.
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
# Defaults are fine — quote-style="double", indent-style="space", line-ending="lf".

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "hangarfit.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = false

# matplotlib ships no PEP 561 stubs; ignore its imports rather than
# using an unofficial stub package that may not track the 3.x API.
[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
