[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hangarfit"
version = "0.16.0"
description = "Helper tool for arranging a flying club's fleet in a stack-style hangar — collision checker, layout solver, tow-path planner, and top-down visualizer."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Patrick Kuhn" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = []
dependencies = [
  "pyyaml>=6.0",
  "shapely>=2.0,<3",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.0", "pytest-xdist>=3.5", "pytest-split>=0.9", "ruff>=0.7.0", "mypy>=1.0", "types-PyYAML", "types-shapely", "hypothesis>=6.100"]
train = ["torch", "onnx>=1.16"]
learned-infer = ["onnxruntime>=1.18"]

[project.scripts]
hangarfit = "hangarfit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the 3D-viewer assets (vendored Three.js + viewer.js) inside the wheel so
# `hangarfit view` can read them at runtime via importlib.resources after a
# plain `pip install` (ADR-0017). These are non-.py files, so they need an
# explicit package-data entry — `packages.find` discovers the packages but not
# their data.
#
# The first entry is the EXPLICIT `viewer.js`, not a `*.js` glob (ADR-0020 /
# issue #437): the viewer's TypeScript source lives in the top-level `viewer/`
# dir, *outside* this package, and esbuild only emits `viewer.js` here — but
# naming the file (rather than globbing) is belt-and-suspenders so no future
# stray `.js` under `_viewer_assets/` can be shipped by accident. The TS
# toolchain (`viewer/`) is never discovered by `packages.find` (`where=["src"]`),
# so no `*.ts`/`node_modules`/`package.json` can reach the sdist or wheel.
[tool.setuptools.package-data]
"hangarfit._viewer_assets" = ["viewer.js"]
"hangarfit._viewer_assets.three" = ["*.js", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default to skipping @slow-marked tests so local `pytest` matches CI.
# Run the slow set on demand with `pytest -m slow`, or run everything
# with `pytest -m ""`.
addopts = "-ra -m 'not slow'"
markers = [
    "slow: tests that may exceed the default 5 s per-fixture solve budget (excluded by default via addopts; run on demand via `pytest -m slow`)",
    "serial: wall-clock-budget determinism canaries that run solve() twice in-process under a `budget_s` deadline and assert bit-identical output — they MUST run OUTSIDE the `-n auto` pytest-xdist pool (CI runs them in a separate serial pass, #492). Under CPU starvation the two in-process solves can complete different restart counts within the same wall-clock budget and diverge, so xdist sibling-worker contention would flake them. `@pytest.mark.xdist_group`/`--dist loadgroup` is INSUFFICIENT: it co-locates a group on one worker but does NOT stop the other workers from saturating the CPU, so the wall-clock budget still races.",
]

[tool.coverage.run]
# Measure branch coverage, not just statement coverage, so a conditional
# whose body is exercised but whose alternate edge is never taken (e.g. an
# `if` with no covered `else`) shows up as a partial rather than reading as
# fully covered. Set here rather than as a `--cov-branch` CLI flag so local
# `pytest --cov` and CI pick it up identically — same local==CI parity goal
# as the `addopts` marker filter above. coverage.py reads this section
# automatically under pytest-cov.
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
# Defaults are fine — quote-style="double", indent-style="space", line-ending="lf".

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "hangarfit.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = false

# matplotlib ships no PEP 561 stubs; ignore its imports rather than
# using an unofficial stub package that may not track the 3.x API.
[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

# onnxruntime (the [learned-infer] extra, #706) ships no py.typed marker, so mypy
# raises import-untyped on ml/infer.py's local import. Same rationale as matplotlib.
[[tool.mypy.overrides]]
module = "onnxruntime.*"
ignore_missing_imports = true

# ml/ (dev/CI-only, never in the wheel) imports hangarfit, which ships no
# py.typed marker, so mypy raises import-untyped on those imports. Scope the
# suppression to ONLY the hangarfit submodules ml/ actually imports — NOT a
# blanket hangarfit.* — so a genuinely-typo'd third-party import inside
# hangarfit's own source still surfaces under `mypy src/hangarfit/`. The
# per-module ignore_missing_imports is keyed to the IMPORTED module, so it
# must name the hangarfit submodules (an ml.* override does not suppress it).
[[tool.mypy.overrides]]
module = [
    "hangarfit.collisions",
    "hangarfit.geometry",
    "hangarfit.loader",
    "hangarfit.models",
    "hangarfit.solver",
    "hangarfit.towplanner",
]
ignore_missing_imports = true

# learned.py's lazy `from ml.infer import solve_learned_impl` causes mypy to
# follow into ml/ when running `mypy src/hangarfit/`. Under that follow, ml/'s
# own `hangarfit.*` imports resolve as Any (per the ignore_missing_imports
# override above), which surfaces spurious errors that do NOT appear under the
# dedicated `mypy ml/` pass. `follow_imports = skip` stops the src-check from
# type-checking ml/ internals (the import resolves to Any in learned.py) WITHOUT
# disabling `mypy ml/`: explicitly-passed files are always checked, so the Stop
# hook's `mypy ml/` still fully type-checks the workspace. (Do NOT use
# ignore_errors here — that suppresses errors even under `mypy ml/`, silently
# neutering the ml/ type-check.)
[[tool.mypy.overrides]]
module = "ml.*"
follow_imports = "skip"
